# PyPatBot

./: .gitignore  LICENSE  README.md  headpatoff.txt  main.py  pyproject.toml  requirements.txt
cogs/: adminstuff.py  animalimages.py  covid.py  credits.py  headpat.py
