[tool.poetry]
name = "pypatbot"
version = "0.1.0"
description = "A Discord bot that gets images from r/heatpats and images from the SheriAPI among other stuff"
authors = ["Red Kitters <lgarvic@icloud.com>"]
license = "Non-Violent Public License"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
discord-pretty-help = "^1.3.0"
requests = "^2.25.1"
python-dotenv = "^0.17.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
